cmake_minimum_required(VERSION 3.3)

project(mdorner)

add_custom_command(
	OUTPUT cbuild
	COMMAND /bin/sh -n "${CMAKE_CURRENT_SOURCE_DIR}/cbuild.sh"
	COMMAND ${CMAKE_COMMAND} ARGS -E copy "${CMAKE_CURRENT_SOURCE_DIR}/cbuild.sh" "${CMAKE_CURRENT_BINARY_DIR}/cbuild"
	MAIN_DEPENDENCY cbuild.sh
	)

add_custom_target(MdBuild ALL DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/cbuild")

install(FILES "${CMAKE_CURRENT_BINARY_DIR}/cbuild"
	DESTINATION /usr/bin
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
